--- a/dev/cloudbuild/cloudbuild.yaml
+++ b/dev/cloudbuild/cloudbuild.yaml
@@ -1,13 +1,15 @@
-timeout: 900s
+metadata:
+  annotations:
+    my-key: my-value
+  namespace: my-namespace
 steps:
-  - name: 'gcr.io/k8s-staging-test-infra/gcb-docker-gcloud:v20230111-cd1b3caf9c'
-    entrypoint: dev/cd/after-push-to-branch
-    env:
-    - GIT_REF=$_GIT_TAG
-    - PULL_BASE_REF=$_PULL_BASE_REF
-    - REGISTRY_BASE=gcr.io/k8s-staging-examples
+- entrypoint: dev/cd/after-push-to-branch
+  env:
+  - GIT_REF=$_GIT_TAG
+  - PULL_BASE_REF=$_PULL_BASE_REF
+  - REGISTRY_BASE=gcr.io/k8s-staging-examples
+  name: gcr.io/k8s-staging-test-infra/gcb-docker-gcloud:v20230111-cd1b3caf9c
 substitutions:
-  # _GIT_TAG will be filled with a git-based tag for the image, of the form vYYYYMMDD-hash, and
-  # can be used as a substitution
   _GIT_TAG: '12345'
-  _PULL_BASE_REF: 'master'
+  _PULL_BASE_REF: master
+timeout: 900s
