--- a/volumes/iscsi/chap-secret.yaml
+++ b/volumes/iscsi/chap-secret.yaml
@@ -1,15 +1,17 @@
----
 apiVersion: v1
+data:
+  discovery.sendtargets.auth.password: ZGVtbw==
+  discovery.sendtargets.auth.password_in: bXBhc3M=
+  discovery.sendtargets.auth.username: dXNlcg==
+  discovery.sendtargets.auth.username_in: bXVzZXI=
+  node.session.auth.password: cGFzc3dvcmQ=
+  node.session.auth.password_in: bXBhc3My
+  node.session.auth.username: dXNlcm5hbWU=
+  node.session.auth.username_in: bXVzZXIy
 kind: Secret
 metadata:
+  annotations:
+    my-key: my-value
   name: chap-secret
-type: "kubernetes.io/iscsi-chap"
-data:
-  discovery.sendtargets.auth.username: dXNlcg==
-  discovery.sendtargets.auth.password: ZGVtbw==
-  discovery.sendtargets.auth.username_in: bXVzZXI=
-  discovery.sendtargets.auth.password_in: bXBhc3M=
-  node.session.auth.username: dXNlcm5hbWU=
-  node.session.auth.password: cGFzc3dvcmQ=
-  node.session.auth.username_in: bXVzZXIy
-  node.session.auth.password_in: bXBhc3My
+  namespace: my-namespace
+type: kubernetes.io/iscsi-chap
